# hethdapp

./: README.md  hethdapp.cabal
src/Network/Web3/Dapp/: Bytes.hs  ERC20.hs  EthABI.hs  FixArray.hs  Int.hs  Solc.hs  Swarm.hs
src/Network/Web3/Dapp/Bytes/: Internal.hs  TH.hs  Types.hs
src/Network/Web3/Dapp/ERC20/: EIP20Interface.sol  Interface.hs
src/Network/Web3/Dapp/EthABI/: AST.hs  Bzz.hs  TH.hs  Types.hs
src/Network/Web3/Dapp/FixArray/: Internal.hs
src/Network/Web3/Dapp/Int/: Internal.hs  TH.hs
test/Network/Web3/Dapp/: BytesSpec.hs  EthABISpec.hs  FixArraySpec.hs  IntSpec.hs
