name:                hethdapp
version:             0.1.0.0
synopsis:            Libreria para trabajar con DApps
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              The Linux Kitten
maintainer:          thelinuxkitten@thelinuxkitten.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Web3.Dapp.EthABI.Types
                     , Network.Web3.Dapp.EthABI
                     , Network.Web3.Dapp.Solc
                     , Network.Web3.Dapp.Swarm
                     , Network.Web3.Dapp.EthABI.AST
                     , Network.Web3.Dapp.EthABI.Bzz
                     , Network.Web3.Dapp.EthABI.TH
  build-depends:       base >=4 && <5
                     , aeson
                     , attoparsec
                     , base16-bytestring
                     , bytestring
                     , cryptonite
                     , curl
                     , directory
                     , hethrpc
                     , hjsonrpc
                     , memory
                     , monad-logger
                     , process
                     , split
                     , template-haskell
                     , text
                     , th-lift-instances
                     , unordered-containers
  ghc-options:       -ddump-splices
  hs-source-dirs:      src
  default-language:    Haskell2010

