name:                hethdapp
version:             0.1.0.0
synopsis:            Libreria para compilar y manipular DApps
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              The Linux Kitten
maintainer:          thelinuxkitten@thelinuxkitten.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Web3.Dapp.Int.Internal
                     , Network.Web3.Dapp.Int.TH
                     , Network.Web3.Dapp.Int
                     , Network.Web3.Dapp.Bytes.Internal
                     , Network.Web3.Dapp.Bytes.TH
                     , Network.Web3.Dapp.Bytes
                     , Network.Web3.Dapp.FixArray.Internal
                     , Network.Web3.Dapp.FixArray
                     , Network.Web3.Dapp.EthABI.Types
                     , Network.Web3.Dapp.EthABI
                     , Network.Web3.Dapp.Solc
                     , Network.Web3.Dapp.Swarm
                     , Network.Web3.Dapp.EthABI.AST
                     , Network.Web3.Dapp.EthABI.Bzz
                     , Network.Web3.Dapp.EthABI.TH
                     , Network.Web3.Dapp.ERC20.Interface
                     , Network.Web3.Dapp.ERC20
  build-depends:       base >=4 && <5
                     , aeson
                     , attoparsec
                     , base16-bytestring
                     , bytestring
                     , cryptonite
                     , curl
                     , deepseq
                     , directory
                     , hethrpc
                     , hjsonrpc
                     , memory
                     , monad-logger
                     , process
                     , singletons
                     , sized
                     , split
                     , template-haskell
                     , text
                     , th-lift-instances
                     , unordered-containers
  ghc-options:       -ddump-splices
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -Wall
  build-depends:        base >= 4 && <= 5
                      , bytestring
                      , hethdapp
                      , hethrpc
                      , hspec == 2.*
                      , text
  other-modules:        Network.Web3.Dapp.EthABISpec
                      , Network.Web3.Dapp.IntSpec
                      , Network.Web3.Dapp.BytesSpec
                      , Network.Web3.Dapp.FixArraySpec
  default-language:     Haskell2010

